2023-09-23T08:14:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6282581523 # 1202
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 4 2899
* notice: prev accum: outdated-unq outdated-all / unq all: 1699 160498 / 1728 163453
* notice: next accum: outdated-unq outdated-all / unq all: 1699 160498 / 1730 163565
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -112 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-09-09 2023-09-23]

2023-09-23T00:56:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6280583915 # 1201
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 4 2899
* notice: prev accum: outdated-unq outdated-all / unq all: 1697 160199 / 1728 163357
* notice: next accum: outdated-unq outdated-all / unq all: 1699 160498 / 1728 163453
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -1 -56 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-09-08] / [2023-09-09 2023-09-22]

2023-09-22T16:16:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6276649825 # 1200
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
* notice: last 14d: unq all: 4 2899
* notice: prev accum: outdated-unq outdated-all / unq all: 1697 160199 / 1728 163265
* notice: next accum: outdated-unq outdated-all / unq all: 1697 160199 / 1728 163357
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -1 -93 / +2 +204 -0 -0 / 2 204
* notice: removed / changed dates: [] / [2023-09-08 2023-09-22]

2023-09-22T08:16:54Z: