@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-23T08:14:35Z",
-  "count" : 131,
-  "count_minmax" : [ 113, 299 ],
-  "count_decinc" : [ -168, +299 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -1, +3 ]
+  "timestamp" : "2023-09-23T16:14:59Z",
+  "count" : 37,
+  "count_minmax" : [ 37, 299 ],
+  "count_decinc" : [ -262, +299 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 3 ],
+  "uniques_decinc" : [ -2, +3 ]
 }
