@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-09-23T08:14:35Z",
+  "timestamp" : "2023-09-23T16:14:59Z",
   "count_outdated" : 160498,
   "uniques_outdated" : 1699,
-  "count" : 163565,
+  "count" : 163660,
   "uniques" : 1730,
   "clones" : [
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 131,
-      "count_minmax": [ 113, 299 ],
-      "count_decinc": [ 168, 299 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 1, 3 ]
+      "count": 37,
+      "count_minmax": [ 37, 299 ],
+      "count_decinc": [ 262, 299 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2023-09-10T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-09-23T00:00:00Z",
-      "count": 112,
-      "count_minmax": [ 112, 112 ],
-      "count_decinc": [ 0, 112 ],
+      "count": 207,
+      "count_minmax": [ 112, 207 ],
+      "count_decinc": [ 0, 207 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
