@@ -1,11 +1,11 @@
 {
-  "count": 2899,
+  "count": 2900,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 131,
-      "uniques": 2
+      "count": 37,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-10T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-09-23T00:00:00Z",
-      "count": 112,
+      "count": 207,
       "uniques": 2
     }
   ]
